# Laudiolin

./: .editorconfig  .env.template  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  index.html  nodemon.json  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  readme.md  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: build.yml
cfg/: postcss.config.js
public/: authorize.html  route.json
src/: App.svelte  constants.ts  index.tsx  main.ts  main.tsx  style.css  types.ts  utils.ts  vite.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  updates.json
src-tauri/bundler/: LICENSE.rtf  bundler.wxs  strings.wxl
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  backend.rs  discord.rs  handoff.rs  link.rs  main.rs  proxy.rs  settings.rs  wrapper.rs
src-tauri/updates/: 2.2.1.json  3.0.0.json
src-tauri/versions/: 1.0.1.json  1.0.2.json  1.0.3.json  1.0.4.json  1.0.5.json  1.0.6.json
src/backend/: audio.ts  discord.ts  elixir.ts  events.ts  fs.ts  gateway.ts  link.ts  modules.ts  music.ts  navigation.ts  notifications.ts  offline.ts  playlist.ts  search.ts  settings.ts  social.ts  stores.ts  stores.tsx  types.ts  user.ts
src/backend/core/: audio.ts  playlist.ts
src/backend/desktop/: altplayer.ts  fs.ts  link.ts  offline.ts
src/backend/features/: elixir.ts  notifications.ts  social.ts
src/backend/modules/: fs.ts  player.ts
src/backend/social/: gateway.ts  user.ts
src/css/: App.scss  ControlPanel.scss  Controls.scss  ErrorPage.scss  Loader.scss  Login.scss  NavBar.scss  NavPanel.scss  Playlist.scss  ProgressBar.css  SearchTrack.css  SearchTrack.scss  Settings.scss  Text.scss  TopBar.scss  TopButtons.scss  TrackPage.scss  main.css
src/css/components/: EmbedPlayer.scss  Login.scss  MiniPlayer.scss  Playlist.scss  Track.scss  TrackList.scss  User.scss
src/css/layout/: ActivityPanel.scss  ControlPanel.scss  NavPanel.scss  TopBar.scss  TopButtons.scss
src/css/pages/: Elixir.scss  Home.scss  Login.scss  Playlist.scss  Queue.scss  SearchResults.scss  Settings.scss
src/electron/: index.html  main.ts
src/lib/: Button.svelte  Controls.svelte  Navbar.svelte
src/ui/: App.css  App.scss  App.tsx  constants.ts
src/ui/components/: Alert.tsx  AnimatePages.tsx  Button.tsx  ContentPanel.tsx  Controls.tsx  MainView.tsx  NavBar.tsx  NavLink.tsx  Navigate.tsx  Navigator.tsx  SearchResults.tsx  TitleBar.tsx  TopButtons.tsx  Track.tsx  TrackList.tsx  controls.tsx  navbar.tsx
src/ui/components/MusicControls/: ProgressBar.tsx  VolumeControl.tsx
src/ui/components/common/: AnimatedView.tsx  BasicButton.tsx  BasicDropdown.tsx  BasicModal.tsx  BasicToggle.tsx  Button.tsx  Dropdown.tsx  Loader.tsx  Modal.tsx  ProgressBar.tsx  Router.tsx
src/ui/components/control/: ProgressBar.tsx  VolumeSlider.tsx
src/ui/components/home/: Favorites.tsx  Playlists.tsx  Recents.tsx
src/ui/components/layout/: MainView.tsx  NavPanel.tsx  TopBar.tsx
src/ui/components/modals/: AddToPlaylist.tsx
src/ui/components/music/: ProgressBar.tsx  VolumeControl.tsx
src/ui/components/nav/: CurrentUser.tsx  NavPageList.tsx  Playlists.tsx
src/ui/components/player/: Controls.tsx  ControlsBad.tsx  EmbedPlayer.tsx  MiniPlayer.tsx  ProgressBar.tsx  (+1 more)
src/ui/layout/: ActivityPanel.tsx  ControlPanel.tsx  MainView.tsx  NavPanel.tsx  TopBar.tsx  TopButtons.tsx
src/ui/links/: Listen.tsx
src/ui/pages/: Downloads.tsx  Elixir.tsx  ErrorPage.tsx  Favorites.tsx  Home.tsx  Login.tsx  LoginPage.tsx  Playlist.tsx  PlaylistPage.tsx  Queue.tsx  Recents.tsx  Search.tsx  SearchResults.tsx  SearchResultsPage.tsx  Settings.tsx  SettingsPage.tsx  TrackPage.tsx
webpack/: electron.config.js  react.config.js  webpack.config.js
(+13 files in other folders)
