[package]
name = "laudiolin"
version = "3.0.0"
description = "A music player."
authors = ["KingRainbow44", "Arikatsu"]
license = "MIT"
repository = "https://github.com/seiKiMo-Inc/Laudiolin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.4.1", features = ["api-all", "system-tray", "updater", "devtools"] }
window-shadows = "0.2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"

# Utility
open = "5.0.0"
online = "4.0.0"
tokio = { version = "1.25.0", features = ["fs"] }

# Deep Linking
[dependencies.tauri-plugin-deep-link]
git = "https://github.com/FabianLars/tauri-plugin-deep-link"
branch = "main"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
