[package]
name = "laudiolin"
version = "3.0.0"
description = "A music player."
authors = ["KingRainbow44", "Arikatsu"]
license = "MIT"
repository = "https://github.com/seiKiMo-Inc/Laudiolin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]

# Tauri
tauri = { version = "1.4.1", features = ["api-all", "system-tray", "updater", "devtools"] }
tauri-plugin-localhost = "0.1.0"
tauri-plugin-deep-link = "0.1.2"
window-shadows = "0.2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"

# Utility
open = "5.0.0"
online = "4.0.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.25.0", features = ["fs"] }
portpicker = "0.1"

# HTTP serving
rouille = "3.6.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
